@@ -6,54 +6,98 @@
     <div class="select-wrapper">
         <select name="filter" class="lv-state-field list-filters-selector">
             <option value="">{% translate 'All' context 'creme_core-filter' %}</option>
-            {% for efilter in entity_filters %}
-             <option value="{{efilter.id}}"{% if efilter_id == efilter.id %} selected{% endif %}>{{efilter}}</option>
+            {% for efilter in global_efilters %}
+            <option value="{{efilter.id}}"{% if selected == efilter %} selected{% endif %}>{{efilter}}</option>
+            {% endfor %}
+
+            {% if my_efilters %}
+            <optgroup label="{% translate 'My filters' %}">
+              {% for efilter in my_efilters %}
+                <option value="{{efilter.id}}"{% if selected == efilter %} selected{% endif %}>{{efilter}}</option>
+              {% endfor %}
+            </optgroup>
+            {% endif %}
+
+            {% for user, efilters in other_efilters %}
+            <optgroup label="{% blocktranslate %}Filters of {{user}}{% endblocktranslate %}">
+              {% for efilter in efilters %}
+                <option value="{{efilter.id}}"{% if selected == efilter %} selected{% endif %}>{{efilter}}</option>
+              {% endfor %}
+            </optgroup>
             {% endfor %}
         </select>
         <div class="select-arrow"></div>
     </div>
-{% with efilter=entity_filters.selected ctype=model|ctype_for_instance %}
-    {% if efilter_id %}
-      <a data-action="popover">
-          {% widget_icon name='info' label=_('Information on the current filter') size='listview-filter-action' %}
-          {% include 'creme_core/frags/entity-filter-summary.html' with efilter=efilter user=user %}
-      </a>
+ {% with ctype=model|ctype_for_instance %}
+  {% if selected != None %}
+    <a data-action="popover">
+        {% widget_icon name='info' label=_('Information on the current filter') size='listview-filter-action' %}
+        {% include 'creme_core/frags/entity-filter-summary.html' with efilter=selected user=user %}
+    </a>
+  {% endif %}
+  {% if show_buttons %}
+    <a href="{% url 'creme_core__create_efilter' ctype.id %}">
+        {% widget_icon name='add' label=_('Create a custom filter') size='listview-filter-action' %}
+    </a>
+    {% if selected != None %}
+    <a href="{% url 'creme_core__clone_efilter' selected.id %}" data-action="redirect">
+        {% widget_icon name='clone' label=_('Clone this filter') size='listview-filter-action' %}
+    </a>
     {% endif %}
-    {% if show_buttons %}
-      <a href="{% url 'creme_core__create_efilter' ctype.id %}">
-          {% widget_icon name='add' label=_('Create a custom filter') size='listview-filter-action' %}
-      </a>
-      {% if efilter_id %}
-      <a href="{% url 'creme_core__clone_efilter' efilter_id %}" data-action="redirect">
-          {% widget_icon name='clone' label=_('Clone this filter') size='listview-filter-action' %}
-      </a>
-      {% endif %}
+    {% if edition_allowed %}
+    <a href="{{selected.get_edit_absolute_url}}" data-action="redirect">
+        {% widget_icon name='edit' label=_('Edit this filter') size='listview-filter-action' %}
+    </a>
+    {% elif edition_error %}
+    <a href="#" data-action="redirect" class="is-disabled">
+        {% widget_icon name='edit' label=edition_error size='listview-filter-action' %}
+    </a>
+    {% endif %}
+    {% if deletion_allowed %}
+    <a href="{{selected.get_delete_absolute_url}}" data-action="delete">
+        {% widget_icon name='delete' label=_('Delete this custom filter') size='listview-filter-action' %}
+    </a>
+    {% elif deletion_error %}
+    <a href="#" data-action="delete" class="is-disabled">
+        {% widget_icon name='delete' label=deletion_error size='listview-filter-action' %}
+    </a>
+    {% endif %}
+  {% endif %}
+ {% endwith %}
+</fieldset>
 {% comment %}
-      <a href="{{efilter.get_edit_absolute_url}}" data-action="redirect" class="{% if not can_edit %}is-disabled{% endif %}">
-          {% widget_icon name='edit' label=_('Edit this filter') size='listview-filter-action' %}
-      </a>
-      <a href="{{efilter.get_delete_absolute_url}}" data-action="delete" class="{% if not can_delete %}is-disabled{% endif %}">
-          {% widget_icon name='delete' label=_('Delete this custom filter') size='listview-filter-action' %}
-      </a>
-{% endcomment %}
-      {% if edition_allowed %}
-      <a href="{{efilter.get_edit_absolute_url}}" data-action="redirect">
-          {% widget_icon name='edit' label=_('Edit this filter') size='listview-filter-action' %}
-      </a>
-      {% elif edition_error %}
-      <a href="#" data-action="redirect" class="is-disabled">
-          {% widget_icon name='edit' label=edition_error size='listview-filter-action' %}
-      </a>
-      {% endif %}
-      {% if deletion_allowed %}
-      <a href="{{efilter.get_delete_absolute_url}}" data-action="delete">
-          {% widget_icon name='delete' label=_('Delete this custom filter') size='listview-filter-action' %}
-      </a>
-      {% elif deletion_error %}
-      <a href="#" data-action="delete" class="is-disabled">
-          {% widget_icon name='delete' label=deletion_error size='listview-filter-action' %}
-      </a>
-      {% endif %}
+{% load i18n creme_ctype creme_widgets %}{% load blockjsondata from creme_core_tags %}
+<fieldset title="{% translate 'Filter the lines of the table with conditions on fields, relationships…' %}">
+    <div class="legend">
+        {% translate 'Filter' context 'creme_core-noun' as label %}{% widget_icon name='filter' label=label size='listview-filter' %}{{label}}
+    </div>
+    <div class="select-wrapper">
+        <select name="filter" class="lv-state-field list-filters-selector">
+            <option value="">{% translate 'All' context 'creme_core-filter' %}</option>
+            {% for efilter in entity_filters %}
+                <option value="{{efilter.id}}"{% if efilter_id == efilter.id %} selected{% endif %}>{{efilter}}</option>
+            {% endfor %}
+        </select>
+        <div class="select-arrow"></div>
+    </div>
+{% with efilter=entity_filters.selected %}
+    {% if efilter_id %}
+        <a data-action="popover">
+            {% widget_icon name='info' label=_('Information on the current filter') size='listview-filter-action' %}
+            {% include 'creme_core/frags/entity-filter-summary.html' with efilter=efilter user=user %}
+        </a>
+    {% endif %}
+    {% if show_buttons %}{% ctype_for_model model as ctype %}
+        <a href="{% url 'creme_core__create_efilter' ctype.id %}">
+            {% widget_icon name='add' label=_('Create a custom filter') size='listview-filter-action' %}
+        </a>
+        <a href="{{efilter.get_edit_absolute_url}}" data-action="redirect" class="{% if not can_edit %}is-disabled{% endif %}">
+            {% widget_icon name='edit' label=_('Edit this filter') size='listview-filter-action' %}
+        </a>
+        <a href="{{efilter.get_delete_absolute_url}}" data-action="delete" class="{% if not can_delete %}is-disabled{% endif %}">
+            {% widget_icon name='delete' label=_('Delete this custom filter') size='listview-filter-action' %}
+        </a>
     {% endif %}
 {% endwith %}
 </fieldset>
+{% endcomment %}
