@@ -30,6 +30,7 @@
           configuration ; a SettingValue has been added to allow all users to edit/delete them
           (it was the behaviour in previous versions).
         - They can now be cloned.
+        - EntityFilters are now grouped by owner in list-views, like HeaderFilters.
     # The deletion views have now a better display for the dependencies issues.
       Example: entities are displayed as HTML links.
     # Apps :
@@ -348,8 +349,10 @@
 
         # In 'creme_core.auth.backend', the constants '_*_PREFIX' have been removed.
         # The method 'creme_core.models.CremeModel._delete_stored_file()' is not static anymore.
-        # In 'creme_core.templatetags.creme_listview', the tags {% listview_entity_filters %} & {% listview_header_filters %}
-          do not inject "can_edit" & "can_delete" in the related template context.
+        # In 'creme_core.templatetags.creme_listview' :
+            - The tag {% listview_entity_filters %} does not inject the following variables in its template context:
+              "entity_filters", "efilter_id", "can_edit", "can_delete".
+            - The tag {% listview_header_filters %} does not inject "can_edit" & "can_delete" in its template context.
         # Apps :
             * Creme_config :
                 - The class 'bricks.ButtonMenuBrick' (& its template) has been heavily reworked.
